// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionRow > should omit the currency for transactions from test networks 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l"
          >
            <a
              class="ring-focus group inline-block css-7nwwrh"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
              rel="noopener noreferrer"
            >
              <span
                class="css-170792"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="magnifying-glass-id"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M19 17l-3.172-3.172"
                      />
                      <circle
                        cx="13"
                        cy="11"
                        r="4"
                      />
                    </g>
                    <path
                      d="M4.002 8c-.552 0-1.004-.447-1.004-1s.442-1 .994-1h.01a1 1 0 1 1 0 2zM7.002 8c-.552 0-1.004-.447-1.004-1s.442-1 .994-1h.01a1 1 0 1 1 0 2z"
                      fill="currentColor"
                    />
                    <path
                      d="M18 5V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h4"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="table-cell md:hidden lg:table-cell"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 text-theme-secondary-text"
          >
            <span
              class="whitespace-nowrap"
              data-testid="TransactionRow__timestamp"
            >
              31.07.2020 4:34 PM
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="flex items-center space-x-2"
              data-testid="TransactionRowMode"
            >
              <span
                class="flex h-5 w-5 items-center border-0 border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="sent"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </span>
              <div
                class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 justify-end"
          >
            <div
              class="flex items-center"
              data-testid="TransactionAmount__tooltip"
            >
              <div
                class="rounded px-1.5 css-xqt0aw"
                color="danger-bg"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex space-x-1 items-center"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    - 121 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden xl:block"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <span
              class="whitespace-nowrap text-theme-secondary-text"
              data-testid="TransactionRow__currency"
            >
              N/A
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l"
          >
            <a
              class="ring-focus group inline-block css-7nwwrh"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
              rel="noopener noreferrer"
            >
              <span
                class="css-170792"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="magnifying-glass-id"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M19 17l-3.172-3.172"
                      />
                      <circle
                        cx="13"
                        cy="11"
                        r="4"
                      />
                    </g>
                    <path
                      d="M4.002 8c-.552 0-1.004-.447-1.004-1s.442-1 .994-1h.01a1 1 0 1 1 0 2zM7.002 8c-.552 0-1.004-.447-1.004-1s.442-1 .994-1h.01a1 1 0 1 1 0 2z"
                      fill="currentColor"
                    />
                    <path
                      d="M18 5V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h4"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="table-cell md:hidden lg:table-cell"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 text-theme-secondary-text"
          >
            <span
              class="whitespace-nowrap"
              data-testid="TransactionRow__timestamp"
            >
              31.07.2020 4:34 PM
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="flex items-center space-x-2"
              data-testid="TransactionRowMode"
            >
              <span
                class="flex h-5 w-5 items-center border-0 border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="sent"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </span>
              <div
                class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures css-9nx3be"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures css-9nx3be"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 justify-end"
          >
            <div
              class="rounded px-1.5 css-xqt0aw"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-center"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 121 DARK
                </span>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden xl:block"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <span
              class="whitespace-nowrap text-theme-secondary-text"
              data-testid="TransactionRow__currency"
            >
              N/A
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render compact skeleton 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pl-6 rounded-l"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 16px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td
          class="table-cell md:hidden lg:table-cell"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 150px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5"
          >
            <div
              class="mr-4 flex items-center -space-x-1"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 44px; height: 44px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
              <div
                class="z-0 flex rounded-full ring-6 ring-theme-background"
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                  class="flex w-auto max-w-full items-center overflow-hidden leading-none"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 44px; height: 44px; border-radius: 50%;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 1px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5"
          >
            <div
              class="mr-4"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 44px; height: 44px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 1px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 justify-end"
          >
            <span
              class="flex h-7 items-center space-x-1 rounded border-2 border-theme-secondary-300 px-2 dark:border-theme-secondary-800"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 35px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden xl:block"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-17.5 pr-6 rounded-r justify-end"
          >
            <span
              class="flex items-center space-x-1"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 0px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 35px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render responsive 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group css-16ynu5g"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <a
              class="ring-focus group inline-block css-7nwwrh"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
              rel="noopener noreferrer"
            >
              <span
                class="css-170792"
              >
                <span
                  class="no-ligatures css-0"
                  data-testid="TruncateMiddle"
                >
                  ea63bf…b5c79b
                </span>
              </span>
            </a>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Date
            </div>
            <div
              class="whitespace-nowrap text-theme-secondary-text"
              data-testid="TransactionRow__timestamp"
            >
              31.07.2020 4:34 PM
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Sender
            </div>
            <div
              class="flex w-full text-right"
            >
              <div
                class="flex w-0 flex-1 items-center justify-end overflow-hidden gap-2"
              >
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
                <div
                  class="shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <div
              class="flex w-full text-right"
            >
              <div
                class="flex w-0 flex-1 items-center justify-end overflow-hidden flex-row-reverse gap-2"
              >
                <div
                  class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Amount
            </div>
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 121 DARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Currency
            </div>
            <div
              class="flex flex-col justify-end"
            >
              <span
                class="whitespace-nowrap"
                data-testid="TransactionRow__currency"
              >
                N/A
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render responsive 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group css-16ynu5g"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TableRow__mobile"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <a
              class="ring-focus group inline-block css-7nwwrh"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
              rel="noopener noreferrer"
            >
              <span
                class="css-170792"
              >
                <span
                  class="no-ligatures css-0"
                  data-testid="TruncateMiddle"
                >
                  ea63bf…b5c79b
                </span>
              </span>
            </a>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Date
            </div>
            <div
              class="whitespace-nowrap text-theme-secondary-text"
              data-testid="TransactionRow__timestamp"
            >
              31.07.2020 4:34 PM
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Sender
            </div>
            <div
              class="flex w-full text-right"
            >
              <div
                class="flex w-0 flex-1 items-center justify-end overflow-hidden gap-2"
              >
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
                <div
                  class="shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <div
              class="flex w-full text-right"
            >
              <div
                class="flex w-0 flex-1 items-center justify-end overflow-hidden flex-row-reverse gap-2"
              >
                <div
                  class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
                <div
                  class="w-0 flex-1"
                >
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full justify-end"
                  >
                    <span
                      class="font-semibold text-base text-theme-text"
                      data-testid="Address__alias"
                    >
                      <span
                        class="no-ligatures css-9nx3be"
                        data-testid="TruncateEnd"
                      >
                        ARK Wallet 1
                      </span>
                    </span>
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                      data-testid="Address__address"
                    >
                      D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Amount
            </div>
            <div
              class="rounded px-1.5 css-1pbju28"
              color="danger-bg"
              data-testid="AmountLabel__wrapper"
            >
              <div
                class="flex space-x-1 items-stretch"
              >
                <span
                  class="whitespace-nowrap text-sm"
                  data-testid="Amount"
                >
                  - 121 DARK
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Currency
            </div>
            <div
              class="flex flex-col justify-end"
            >
              <span
                class="whitespace-nowrap"
                data-testid="TransactionRow__currency"
              >
                N/A
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render skeleton 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 16px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td
          class="table-cell md:hidden lg:table-cell"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11"
          >
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 150px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11"
          >
            <div
              class="mr-4 flex items-center space-x-2"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 20px; height: 20px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 20px; height: 20px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 1px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11"
          >
            <div
              class="mr-4"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 20px; height: 20px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 1px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 justify-end"
          >
            <span
              class="flex h-7 items-center space-x-1"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 35px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </span>
          </div>
        </td>
        <td
          class="hidden xl:block"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <span
              class="flex items-center space-x-1"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 0px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 35px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRow > should render with currency 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=" css-16ynu5g"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pl-6 rounded-l"
          >
            <a
              class="ring-focus group inline-block css-7nwwrh"
              data-ring-focus-margin="-m-1"
              data-testid="Link"
              href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
              rel="noopener noreferrer"
            >
              <span
                class="css-170792"
              >
                <div
                  class="css-v0ob3f"
                  height="16"
                  width="16"
                >
                  <svg
                    id="magnifying-glass-id"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    >
                      <path
                        d="M19 17l-3.172-3.172"
                      />
                      <circle
                        cx="13"
                        cy="11"
                        r="4"
                      />
                    </g>
                    <path
                      d="M4.002 8c-.552 0-1.004-.447-1.004-1s.442-1 .994-1h.01a1 1 0 1 1 0 2zM7.002 8c-.552 0-1.004-.447-1.004-1s.442-1 .994-1h.01a1 1 0 1 1 0 2z"
                      fill="currentColor"
                    />
                    <path
                      d="M18 5V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h4"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </span>
            </a>
          </div>
        </td>
        <td
          class="table-cell md:hidden lg:table-cell"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 text-theme-secondary-text"
          >
            <span
              class="whitespace-nowrap"
              data-testid="TransactionRow__timestamp"
            >
              31.07.2020 4:34 PM
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="flex items-center space-x-2"
              data-testid="TransactionRowMode"
            >
              <span
                class="flex h-5 w-5 items-center border-0 border-theme-danger-100 text-theme-danger-400 dark:border-theme-danger-400"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    id="sent"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </span>
              <div
                class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 space-x-4"
          >
            <div
              class="ring-theme-background bg-theme-background group-hover:ring-theme-secondary-100 group-hover:bg-theme-secondary-100 dark:group-hover:ring-black dark:group-hover:bg-black shrink-0 css-1i0wxh3"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(0, 150, 136)" width="100" height="100"/><circle r="50" cx="80" cy="50" fill="rgb(76, 175, 80)"/><circle r="35" cx="100" cy="40" fill="rgb(156, 39, 176)"/><circle r="40" cx="90" cy="70" fill="rgb(3, 169, 244)"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="w-0 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-base"
                  data-testid="Address__address"
                >
                  D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 justify-end"
          >
            <div
              class="flex items-center"
              data-testid="TransactionAmount__tooltip"
            >
              <div
                class="rounded px-1.5 css-xqt0aw"
                color="danger-bg"
                data-testid="AmountLabel__wrapper"
              >
                <div
                  class="flex space-x-1 items-center"
                >
                  <span
                    class="whitespace-nowrap text-sm"
                    data-testid="Amount"
                  >
                    - 121 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td
          class="hidden xl:block"
        >
          <div
            class="flex items-center px-3 my-1 transition-colors duration-100 min-h-11 pr-6 rounded-r justify-end"
          >
            <span
              class="whitespace-nowrap"
              data-testid="TransactionRow__currency"
            >
              <span
                class="whitespace-nowrap text-theme-secondary-text"
                data-testid="Amount"
              >
                0 BTC
              </span>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
